--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "02-website-project",
-  "version": "1.0.0",
-  "description": "",
-  "main": "vite.config.js",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gymmu/02-website-project.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/gymmu/02-website-project/issues"
-  },
-  "homepage": "https://github.com/gymmu/02-website-project#readme",
-  "devDependencies": {
-    "gh-pages": "^6.3.0",
-    "vite": "^7.1.12"
-  }
+	"name": "02-website-project",
+	"version": "1.0.0",
+	"description": "",
+	"main": "vite.config.js",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"predeploy": "vite build",
+		"deploy": "gh-pages -d dist",
+		"lint": "biome check --write"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/gymmu/02-website-project.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"type": "module",
+	"bugs": {
+		"url": "https://github.com/gymmu/02-website-project/issues"
+	},
+	"homepage": "https://github.com/gymmu/02-website-project#readme",
+	"devDependencies": {
+		"@biomejs/biome": "2.3.2",
+		"gh-pages": "^6.3.0",
+		"vite": "^7.1.12"
+	}
 }
